# final_2

./: PRESENTATION TO THE BOARD  README.md
artifacts/: dataset_contract.json  eda_report.html  evaluation_report.md  feature_engineer.pkl  feature_names.json  insights.md  model_card.md
retail_ai_final_project/: .gitignore  CREW_STRUCTURE.md  README.md  generate_english_report.py  generate_hebrew_report.py  main.py  pyproject.toml  requirements.txt
retail_ai_final_project/app/: flask_app.py  streamlit_app.py
retail_ai_final_project/artifacts/: contract_validation_report.md  dataset_contract.json  evaluation_report.md  model_card.md
retail_ai_final_project/crew/: agents.yaml  crew_flow.py  tasks.yaml  tools.py
retail_ai_final_project/notebooks/: eda_playground.ipynb
retail_ai_final_project/src/data_analyst/: __init__.py  build_contract.py  eda.py  ingest_and_clean.py
retail_ai_final_project/src/data_scientist/: __init__.py  evaluate_models.py  feature_engineering.py  train_models.py
retail_ai_final_project/src/utils/: __init__.py  generate_pdf_report.py  kaggle_downloader.py  logging_config.py  logging_utils.py  reproducibility.py  validation.py  validation_utils.py
